# lifecycle

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  config.yaml  deny.toml  design.md  improve-ask.md  improve-plan.md
.cursor-plugin/: marketplace.json
.cursor/rules/: omnia.mdc  project.mdc
.github/workflows/: ci.yaml  patch.yaml  publish.yaml  release.yaml
.specify/: config.yaml
.specify/.cursor-plugin/: plugin.json
.specify/plugin/rules/: spec.mdc
.specify/plugin/skills/explore/: SKILL.md
.specify/plugin/skills/propose/: SKILL.md
.specify/references/: specify.md
.specify/skills/apply/: SKILL.md
.specify/skills/archive/: SKILL.md
docs/: architecture.md  plugins.md  vectis.md
examples/: README.md
examples/multi-repo/.specify/: config.yaml
examples/planning/: registry.toml
examples/planning/openspec/: config.yaml
examples/repo/.opsx/: brief.toml
examples/repo/.opsx/upstream/: design.md
examples/simple/.specify/: config.yaml
improvements/: claude-4-6-opus.md  gemini-3-pro-preview.md  gemini-3-pro.md  gpt-5-3-codex.md  gpt-5-4.md  gpt-5.3-codex.md
openspec/: config.omnia.yaml  config.yaml
openspec/schemas/omnia/: schema.yaml
plugins/omnia/.cursor-plugin/: plugin.json
plugins/omnia/references/: agent-teams.md  capabilities.md
plugins/omnia/references/providers/: README.md
plugins/omnia/skills/code-reviewer/: SKILL.md
plugins/omnia/skills/crate-writer/: SKILL.md
plugins/omnia/skills/guest-writer/: SKILL.md
plugins/omnia/skills/test-writer/: SKILL.md
plugins/plan/.cursor-plugin/: plugin.json
plugins/plan/rules/: plan.mdc
plugins/plan/skills/epic-analyzer/: SKILL.md
plugins/plan/skills/sow-writer/: SKILL.md
plugins/references/: README.md  agent-teams.md  specify.md  universal-review-checks.md
plugins/rt/.cursor-plugin/: plugin.json
plugins/rt/rules/: rt.mdc
plugins/rt/skills/code-analyzer/: SKILL.md
plugins/rt/skills/git-cloner/: SKILL.md
plugins/rt/skills/replay-writer/: SKILL.md
plugins/rt/skills/wiretapper/: SKILL.md
plugins/spec/: README.md
plugins/spec/.cursor-plugin/: plugin.json
plugins/spec/references/: apply.md  check-types.md  delta-merge.md  design.md  entry-point-patterns.md  proposal.md  schema-resolution.md  spec.md  specify.md  tasks.md
plugins/spec/rules/: spec.mdc
plugins/spec/skills/abandon/: SKILL.md
plugins/spec/skills/apply/: SKILL.md
plugins/spec/skills/archive/: SKILL.md  delta-merge.md
plugins/spec/skills/define/: SKILL.md
plugins/spec/skills/drop/: SKILL.md
plugins/spec/skills/explore/: SKILL.md
plugins/spec/skills/init/: SKILL.md
plugins/spec/skills/merge/: SKILL.md  delta-merge.md
plugins/spec/skills/promote/: SKILL.md  delta-merge.md
plugins/spec/skills/propose/: SKILL.md
plugins/spec/skills/reverse-spec/: SKILL.md
plugins/spec/skills/review/: SKILL.md
plugins/spec/skills/status/: SKILL.md
plugins/spec/skills/verify/: SKILL.md
plugins/vectis/.cursor-plugin/: plugin.json
plugins/vectis/references/: universal-review-checks.md
plugins/vectis/rules/: vectis.mdc
plugins/vectis/skills/android-reviewer/: SKILL.md
plugins/vectis/skills/android-writer/: SKILL.md
plugins/vectis/skills/core-reviewer/: SKILL.md
plugins/vectis/skills/core-writer/: SKILL.md
plugins/vectis/skills/design-system-writer/: SKILL.md
plugins/vectis/skills/ios-reviewer/: SKILL.md
roadmap/: dsl.md
schemas/: README.md  config.schema.json  schema.schema.json  schema.yaml  skill.schema.json
schemas/omnia/: README.md  config.yaml  schema.yaml
schemas/omnia/instructions/: apply.md  build.md  proposal.md  specs.md  tasks.md
schemas/omnia/templates/: design.md  proposal.md  spec-delta.md  spec-new.md  tasks.md
schemas/realtime/: config.yaml  schema.yaml
schemas/realtime/instructions/: design.md  proposal.md  specs.md  tasks.md
schemas/realtime/templates/: proposal.md  spec-delta.md  spec-new.md
schemas/vectis/: README.md  schema.yaml
schemas/vectis/instructions/: build.md  design.md  proposal.md  specs.md  tasks.md
scripts/: checks.sh  checks.ts  dev-plugins.sh  link_skills.sh  merge-specs.py  prod-plugins.sh
src/: apply.rs  archive.rs  brief.rs  cli.rs  commands.rs  context.rs  fan_out.rs  git.rs  github.rs  lib.rs  main.rs  propose.rs  session.rs  status.rs  sync.rs  util.rs
src/commands/: archive.rs  completions.rs  init.rs  instructions.rs  list.rs  new.rs  schemas.rs  status.rs  update.rs  validate.rs
src/core/: change.rs  config.rs  delta.rs  graph.rs  mod.rs  paths.rs  registry.rs  schema.rs
src/engine/: mod.rs  opsx.rs
src/pipeline/: grouping.rs  mod.rs
supply-chain/: audits.toml  config.toml
templates/: current-state.md  manifest.md  pipeline.md  proposal.md  specs.md
(+72 files in other folders)
