[package]
name = "specify"
description = "Admin CLI for Augentic's spec-driven development workflow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
console = "0.16.2"
dialoguer = "0.12"
dirs = "6.0.0"
include_dir = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ureq = "3.2.0"

[workspace]
# members = ["examples"]
resolver = "3"

[workspace.package]
authors = ["Augentic"]
edition = "2024"
homepage = "https://augentic.io"
keywords = ["spec-driven", "cli", "workflow"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/augentic/specify"
rust-version = "1.93"
version = "0.1.0"

[workspace.lints.rust]
# https://dirname.github.io/rust-std-doc/rustc/lints/listing/allowed-by-default.html
missing_docs = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
# https://doc.rust-lang.org/stable/clippy/index.html
all = "warn"                                                # correctness, suspicious, style, complexity, perf
cargo = "warn"
nursery = "warn"
pedantic = "warn"
cargo_common_metadata = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }

# Cherry-picked lints are from the `restriction` lint group in order to drive up
# consistency, quality, and brevity
# See https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html

# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"

[workspace.dependencies]
